cambios en controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8085
+
 spring.application.name=spring_jdbc_users
 spring.datasource.url=jdbc:mysql://localhost:3311/db_ecomerce
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
